Bug fixes, please merge to kcookvt branch

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <% include partials/header %>
-</head>
-<body>
-  <p>It works!</p>
-</body>
-</html>
+<% include partials/header %>
+<% include partials/center%>
+<div id="logo">
+    <img src="img/static/connect.svg" class="logo">
+    <h2>Software development made easy</h2>
+</div>
+<div class="inline">
+  <a class="submit lg cta" href="/login">Get Started</a>
+</div>
+<% include partials/footer %>
