--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <% include partials/header %>
-    </head>
-    <body>
-        <form action="/" method="post">
-            <div>
-                <label>Username:</label>
-                <input type="text" name="username" />
-                <br/>
-              </div>
-              <div>
-                <label>Password:</label>
-                <input type="password" name="password" />
-              </div>
-              <div>
-                <input type="submit" value="Submit" />
-              </div>
-            </form>
-    </body>
-</html>
+<% include partials/header%>
+<% include partials/center%>
+<div class="box">
+    <h1 class="subtitle">Login</h1>
+    <hr>
+    <form method="post" action="/login">
+        <input type="text" name="username" placeholder="Username" autocomplete="off" class="titleUpd">
+        <input type="password" name="password" placeholder="Password" autocomplete="off" class="titleUpd">
+        <input type="submit" value="Login" class="submit cta lg" style="font-size:2.5vh;">
+    </form>
+    <% include partials/error %>
+</div>
+<% include partials/footer%>
