--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>DevChat</title>
-
-</head>
-<body>
-
+  <head>
+    <title>DevChat</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+  </head>
+  <body>
+    <%include navbar%>
+    <div class="content">
