--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,17 +4,11 @@
 </ul>
 <ul class="vertical" id="vertical" style="display:none">
     <%if(session.userId){%>
-        <% if(session.dev){%>
-            <li><a href="/devHome" class="navlink">Recommended</a></li>
-            <li><a href="localhost:3000/devs/<%=session.user%>" class="navlink">Profile</a></li>
-        <%}else{%>
-            <li><a href="/clients/<%=session.user%>" class="navlink">Profile</a></li>
-            <li><a href="/client/websites" class="navlink">New site</a></li>
-        <%}%>
+        <li><a href="/home" class="navlink">Home</a></li>
+        <li><a href="http://localhost:3000/login" class="navlink">Profile</a></li>
         <li><form action="/logout" method="post" class="link">
             <button class="navlink">Logout</button>
         </form></li>
-        <li><a href="https://devchat.com/home" class="navlink">Continue</a></li>
     <%}else{%>
         <li><a href="/" class="navlink">Home</a></li>
         <li><a href="/login" class="navlink">Login</a></li>
