--- a/views/project.ejs
+++ b/views/project.ejs
@@ -1,4 +1,33 @@
 <%include partials/otherheader%>
-<%include partials/center%>
-<h1>Project</h1>
+<%include partials/othercenter%>
+<script src="../js/sockets.js"></script>
+<%if(website){%>
+    <h1><%=website.name%></h1>
+    <h2><%=website.author%></h2>
+    <%for(let i = 0; i < jobs.length; i++){%>
+        <p><%=jobs[i].name%></p>
+        <%if(jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)]){%>
+            <p><%=jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)].name%></p>
+        <%}%>
+    <%}%>
+    <div class="chat">
+        <div class="chatList">
+            <%if(website.chats){%>
+                <%for(let i = 0; i < website.chats.length; i++){%>
+                    <%var clss = 'message'%>
+                    <%if(website.chats[i].author == session.user){%>
+                        <%clss = 'sentMessage'%>
+                    <%}%>
+                    <p class="p<%=clss%>"><%=website.chats[i].message%><span class="timestamp"><%=website.chats[i].author%> | <%=website.chats[i].madeAt.timeAgo()%></span></p>
+                <%}%>
+            <%}else{%>
+                <p>Sorry, no messages</p>
+            <%}%>
+        </div>
+        <input type="hidden" value="<%=session%>" id="session">
+        <input type="text" class="chat-send" placeholder="Chat" onkeyup="message(event)">
+    </div>
+<%}else{%>
+    <h1>Sorry, no website here</h1>
+<%}%>
 <%include partials/footer%>
