--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,10 +3,10 @@
   <head>
     <title>DevChat</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="/css/main.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
   </head>
   <body>
     <%include navbar%>
