--- a/views/project.ejs
+++ b/views/project.ejs
@@ -4,8 +4,8 @@
 <%if(website){%>
     <div class="projectHeader">
         <h1><%=website.name%></h1>
-        <h2><%=website.author%></h2>
-        <hr>
+        <h2 style="color:grey"><%=website.author%></h2>
+        <hr style="border-color: whitesmoke; border-width:1.5px;">
         <%if(session.user == website.author){%>
             <a href="/tasks/add<%=website._id%>" class="cta lg submit" style="margin-right:auto;margin-left:auto">Add task</a>
         <%}%>
@@ -22,23 +22,62 @@
         </div>
     </div>
     <div class="stats">
-        <h2>Members</h2>
-        <div class="inline margins">
-            <p>Author</p>
-            <a href="http://localhost:3000/clients/<%=website.author%>">
-                <%=website.author%>
-            </a>
+        <div class="chart">
+            <%var total = tasks.length
+            var progress = tasks.filter(function(task){
+                return (task.subTasks.filter(function(sub){return sub.done == true}).length > 0) && (task.subTasks.filter(function(sub){return sub.done == false}).length > 0)
+            }).length;
+            var done = tasks.filter(function(task){
+                return task.done == true
+            });
+            var notDone = tasks.filter(function(task){
+                return task.subTasks.filter(function(sub){return sub.done == true}).length === 0
+            });
+            var pctProgress = 100 * progress/total;
+            var pctDone = 100 * done/total;
+            var pctNotDone = 100 * notDone/total
+            if(tasks.length === 0){
+                pctProgress = 0;
+                pctDone = 0;
+                pctNotDone = 100;
+            }%>
+            <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
+                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#F9F9F9"></circle>
+                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#F0F0F0" stroke-width="5"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#e57373" stroke-width="5" stroke-dasharray="<%=pctDone%> <%=100 - pctDone%>" stroke-dashoffset="25"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#ef9a9a" stroke-width="5" stroke-dasharray="<%=pctProgress%> <%=100 - pctProgress%>" stroke-dashoffset="125 - <%=pctDone%>"></circle>
+                <g class="chart-text">
+                    <text x="50%" y="52%" class="chart-label">
+                        <%=pctDone%>% done
+                    </text>
+                    <text x="50%" y="42%" class="chart-label">
+                        <%=pctProgress%>% in progress
+                    </text>
+                    <text x="50%" y="32%" class="chart-label">
+                        <%=pctNotDone%>% not done
+                    </text>
+                </g>
+            </svg>
         </div>
-        <%for(let i = 0; i < jobs.length; i++){%>
+        <h2>Members</h2>
+        <div class="members">
             <div class="inline margins">
-                <p>
-                    <%=jobs[i].name%>
-                </p> | 
-                <%if(jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)]){%>
-                    <a href="http://localhost:3000/devs/<%=jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)].name%>"><%=jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)].name%></a>
-                <%}%>
+                <p>Author</p> | 
+                <a href="http://localhost:3000/clients/<%=website.author%>">
+                    <%=website.author%>
+                </a>
             </div>
-        <%}%>
+            <%for(let i = 0; i < jobs.length; i++){%>
+                <div class="inline margins">
+                    <p>
+                        <%=jobs[i].name%>
+                    </p> | 
+                    <%if(jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)]){%>
+                        <a href="http://localhost:3000/devs/<%=jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)].name%>"><%=jobs[i].applicants[jobs[i].applicants.map(function(app){return app.chosen}).indexOf(true)].name%></a>
+                    <%}%>
+                </div>
+            <%}%>
+        </div>
     </div>
     <div class="chat">
         <div class="chatList">
