--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
 <ul class="vertical" id="vertical" style="display:none">
     <%if(session.userId){%>
         <li><a href="/home" class="navlink">Home</a></li>
-        <li><a href="http://localhost:3000/login" class="navlink">Profile</a></li>
+        <li><a href="http://localhost:3000/profile" class="navlink">Profile</a></li>
         <li><form action="/logout" method="post" class="link">
             <button class="navlink">Logout</button>
         </form></li>
