--- a/public/css/main.css
+++ b/public/css/main.css
@@ -561,5 +561,11 @@ font-size: 2vh;
     margin: 1.5vh 0;
 }
 .chart-text {
-    font-size: 0.8vw;
+    font-size: 1vw;
+}
+.members {
+    width: 27vw;
+    height: 35vh;
+    overflow-y: auto;
+    background-color: whitesmoke;
 }
