--- a/public/css/main.css
+++ b/public/css/main.css
@@ -569,3 +569,10 @@ font-size: 2vh;
     overflow-y: auto;
     background-color: whitesmoke;
 }
+.github {
+    color: #2196F3;
+    text-decoration: underline;
+    text-align: center;
+    margin: 0;
+    font-size: 2.5vh;
+}
