--- a/views/addTask.ejs
+++ b/views/addTask.ejs
@@ -9,7 +9,7 @@
                 <div class="inline">
                     <div>
                         <input type="text" name="name" placeholder="Task name" autocomplete="off" class="titleUpd" style="display:block">
-                        <textarea name="description" placeholder="Description" class="textarea" style="width:17vw" style="display:block"></textarea>
+                        <textarea name="description" placeholder="Description" class="textarea" style="width:17vw;height:35vh" style="display:block"></textarea>
                     </div>
                     <div>
                         <p class="titleUpd">Members</p>
