--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <h1 class="subtitle">Login</h1>
     <hr>
     <form method="post" action="/login">
-        <input type="text" name="username" placeholder="Username" autocomplete="off" class="titleUpd">
+        <input type="text" name="username" placeholder="Username or email" autocomplete="off" class="titleUpd">
         <input type="password" name="password" placeholder="Password" autocomplete="off" class="titleUpd">
         <input type="submit" value="Login" class="submit cta lg" style="font-size:2.5vh;">
     </form>
